--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,85 @@
+:root {
+  --radius: 5px;
+  --margin: 10px;
+  --margin-lg: 20px;
+  --primary: dodgerblue;
+  --secondary: gold;
+  --light: rgb(224, 224, 224);
+  --lighter: rgb(240, 240, 240);
+  --success: green;
+  --warning: orange;
+}
+* {
+  box-sizing: border-box;
+}
 h1,
 h2 {
   text-align: center;
+  /* text-shadow: 5px 2px 5px rgba(0, 0, 0, 0.5); */
 }
 h2 {
-  color: dodgerblue;
+  color: var(--primary);
 }
-.jumbotron {
-  background-color: gold;
+header {
+  background-color: var(--secondary);
   text-align: center;
+  padding: var(--margin-lg) 0;
+  margin-bottom: var(--margin-lg);
+  border-radius: var(--radius);
+  margin-top: var(--margin);
 }
 h1 {
   color: white;
 }
+.card {
+  margin-bottom: var(--margin);
+}
 button,
 .btn {
-  border: 0;
+  transition: all 0.4s ease;
+  border: 1px solid var(--primary);
   outline: 0;
-  background-color: dodgerblue;
-  border-radius: 4px;
+  background-color: var(--primary);
+  border-radius: var(--radius);
   color: white;
-  margin: 0 10px;
+  margin: 0 var(--margin);
+}
+.btn-lg {
+  width: 100%;
+  margin: 0;
+}
+button:hover {
+  background-color: white;
+  color: black;
 }
 
-input {
+/* .col-left {
+  border-right: 1px solid rgb(224, 224, 224);
+}
+.col-right {
+  border-left: 1px solid rgb(224, 224, 224);
+} */
+
+.col-left div,
+.col-right div {
+  position: sticky;
+  top: var(--margin);
+}
+
+section {
+  margin-bottom: var(--margin-lg);
+}
+
+input,
+textarea {
   outline: 0;
-  border: 0;
+  border: 1px solid var(--light);
+  width: 100%;
 }
 
 label {
   padding-right: 4px;
+  display: block;
 }
 
 .onLine::before {
@@ -39,12 +90,36 @@ label {
   border-radius: 50%;
   width: 10px;
   height: 10px;
-  margin-right: 20px;
+  margin-right: var(--margin-lg);
 }
 .onLine.false {
-  background-color: orange;
+  background-color: var(--warning);
 }
 
 .onLine.true {
-  background-color: green;
+  background-color: var(--success);
+}
+
+footer {
+  text-align: center;
+  background-color: var(--secondary);
+  color: white;
+  padding: var(--margin-lg) 0;
+  border-radius: var(--radius);
+  margin-bottom: var(--margin);
+}
+
+.card-title {
+  background-color: var(--lighter);
+  padding: var(--margin);
+  border-radius: var(--radius);
+}
+
+.card {
+  transition: transform 0.4s ease;
+}
+
+.card:hover {
+  border: 1px solid var(--primary);
+  transform: scale(1.01);
 }
