--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ h2 {
 }
 .header {
   transition: all var(--animationS) ease;
-  background-color: var(--secondary);
+  border: 1px solid var(--secondary);
   text-align: center;
   padding: var(--margin-lg) 0;
   margin-bottom: var(--margin-lg);
@@ -35,13 +35,14 @@ h2 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 h1 {
-  color: white;
+  color: var(--primary);
 }
 .card {
   margin-bottom: var(--margin);
 }
 button,
-.btn {
+.btn,
+.btn-outline:hover {
   transition: all var(--animationS) ease;
   border: 1px solid var(--primary);
   outline: 0;
@@ -63,6 +64,12 @@ button,
   font-size: xx-small;
   padding: 2px 4px;
 }
+.btn-outline {
+  background-color: white;
+  border: 1px solid var(--primary);
+  color: black;
+}
+
 button:hover {
   background-color: white;
   color: black;
@@ -75,6 +82,11 @@ button:hover {
 .top-right {
   position: absolute;
   top: var(--margin);
+  right: var(--margin);
+}
+
+.right {
+  position: absolute;
   right: var(--margin);
 }
 .bottom-right {
@@ -136,8 +148,8 @@ label {
 
 footer {
   text-align: center;
-  background-color: var(--secondary);
-  color: white;
+  border: 1px solid var(--secondary);
+  color: gray;
   padding: var(--margin-lg) 0;
   border-radius: var(--radius);
   margin-bottom: var(--margin);
@@ -180,4 +192,11 @@ nav ul li {
 }
 .fade {
   opacity: 0.5 !important;
+}
+.whiteSpace {
+  white-space: pre-line;
+}
+
+.basic-template {
+  text-align: center;
 }
