--- a/src/App.css
+++ b/src/App.css
@@ -4,27 +4,47 @@
   --margin: 10px;
   --margin-lg: 20px;
   --primary: dodgerblue;
-  --secondary: gold;
+  --third: gold;
+  --secondary: coral;
+  /* --third: indianred; */
   --light: rgb(224, 224, 224);
   --lighter: rgb(240, 240, 240);
-  --success: green;
-  --warning: orange;
+  --success: seagreen;
+  --warning: sandybrown;
   --animationS: 0.4s;
 }
 * {
   box-sizing: border-box;
 }
+
+body {
+  background: url(https://picsum.photos/2560/1440) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  /* height: 100vh; */
+}
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
 h1,
 h2 {
   text-align: center;
+  color: sandybrown;
   /* text-shadow: 5px 2px 5px rgba(0, 0, 0, 0.5); */
 }
 h2 {
   color: var(--primary);
+  border-bottom: 1px solid var(--primary);
 }
 .header {
   transition: all var(--animationS) ease;
-  border: 1px solid var(--secondary);
   text-align: center;
   padding: var(--margin-lg) 0;
   margin-bottom: var(--margin-lg);
@@ -34,11 +54,16 @@ h2 {
 .header:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
+.menu {
+  margin-bottom: var(--margin-lg);
+}
 h1 {
   color: var(--primary);
 }
 .card {
   margin-bottom: var(--margin);
+  border-radius: var(--margin-sm);
+  border: 1px solid var(--third);
 }
 button,
 .btn,
@@ -86,8 +111,9 @@ button:hover {
 }
 
 .right {
-  position: absolute;
-  right: var(--margin);
+  /* position: absolute;
+  right: var(--margin); */
+  float: right;
 }
 .bottom-right {
   position: absolute;
@@ -148,7 +174,6 @@ label {
 
 footer {
   text-align: center;
-  border: 1px solid var(--secondary);
   color: gray;
   padding: var(--margin-lg) 0;
   border-radius: var(--radius);
@@ -174,18 +199,22 @@ footer {
   background-color: var(--warning);
   padding: var(--margin);
   margin: var(--margin);
-  font-weight: bold;
+  /* font-weight: bold; */
   border-radius: var(--radius);
 }
 .success {
   background-color: var(--success);
   color: white;
 }
-
+nav {
+  padding: var(--margin) 0;
+}
 nav ul {
   list-style-type: none;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-bottom: 0;
 }
 nav ul li {
   margin: 0 var(--margin);
@@ -205,4 +234,20 @@ nav ul li {
   border-radius: var(--radius);
   font-weight: normal;
   background-color: white;
+}
+
+.background {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: var(--radius);
+  padding: var(--margin-sm);
+  border: 1px solid var(--third);
+}
+
+a.active {
+  text-decoration: underline;
+  font-weight: bold;
+  color: var(--secondary);
+}
+.complet {
+  min-height: 100vh;
 }
